Forgot password functionality using sec question added, New index UI Refined

--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -6,17 +6,35 @@
 
     <div class="ft-1">
         <h4> Company </h4>
-        <p> Integrated Placements and Scholarship Portal for students and graduates</p>
+        <ul>
+            <li><a href="">Certifications</a></li>
+            <li><a href="">Internships</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Scholarships</a></li>
+            <li><a href="">Dashboard</a></li>
+        </ul>
     </div>
 
     <div class="ft-1">
         <h4> Help </h4>
-        <p> Integrated Placements and Scholarship Portal for students and graduates</p>
+         <ul>
+            <li><a href="">Sitemap</a></li>
+            <li><a href="">Feedback</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Report a Problem</a></li>
+            <li><a href="">F.A.Q</a></li>
+        </ul>
     </div>
 
     <div class="ft-1">
         <h4> Others </h4>
-        <p> Integrated Placements and Scholarship Portal for students and graduates</p>
+         <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Career Advice</a></li>
+            <li><a href="">Log in</a></li>
+            <li><a href="">Register</a></li>
+        </ul>
     </div>
 
     <div class="ft-1">
