--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -27,6 +27,11 @@ html,body{
     margin: 2px;
 }
 
+.btn-white a{
+
+    color:black;
+}
+
 .btn-transp{
     color: white;
     border: 2px solid white;
