Forgot password functionality using sec question added, New index UI Refined, Footer added

--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -273,7 +273,15 @@ footer{
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+}
 
+footer a{
+    color: black;
+    text-decoration: none;
+}
+
+footer ul li{
+    list-style-type: none;
 }
 footer h4{
     color: var(--clr-primary);
