--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -33,13 +33,21 @@
             <li><a href="">Services</a></li>
             <li><a href="">Career Advice</a></li>
             <li><a href="">Log in</a></li>
-            <li><a href="">Register</a></li>
+            <li><a href="">Log out</a></li>
         </ul>
     </div>
 
     <div class="ft-1">
         <h4> Terms </h4>
-        <p> Integrated Placements and Scholarship Portal for students and graduates</p>
+         <ul>
+            <li><a href=""> Privacy Policy </a></li>
+            <li><a href="">Terms of use </a></li>
+            <li><a href="">Career Advice</a></li>
+            <li><a href="">Cookies</a></li>
+            <li><a href="">Accessibility</a></li>
+        </ul>
     </div>
 
 </footer>
+
+<span> &copy; Career Pilot 2023. All Rights Reserved </span>
