--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -18,7 +18,7 @@
     <div class="ft-1">
         <h4> Help </h4>
          <ul>
-            <li><a href="">Sitemap</a></li>
+            <li><a href="/sitemap">Sitemap</a></li>
             <li><a href="">Feedback</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">Report a Problem</a></li>
@@ -29,11 +29,11 @@
     <div class="ft-1">
         <h4> Others </h4>
          <ul>
-            <li><a href="">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Career Advice</a></li>
-            <li><a href="">Log in</a></li>
-            <li><a href="">Log out</a></li>
+            <li><a href="/loginPage">Log in</a></li>
+            <li><a href="/logout">Log out</a></li>
         </ul>
     </div>
 
