--- a/templates/views/partials/header2.hbs
+++ b/templates/views/partials/header2.hbs
@@ -7,16 +7,38 @@
 
     <nav class="navbar">
         <ul class="navbar-links">
-            <li> <a href="/"> Home </a></li>
-            <li> <a href="/courses"> Certifications </a></li>
-            <li> <a href="/internships"> Internships </a> </li>
-            <li> <a href="/jobs"> Jobs </a> </li>
-            <li> <a href="/scholarships"> Scholarships </a> </li>
+            <li class=".nav-item"> <a href="/"> Home </a></li>
+            <li class=".nav-item"> <a href="/courses"> Certifications </a></li>
+            <li class=".nav-item"> <a href="/internships"> Internships </a> </li>
+            <li class=".nav-item"> <a href="/jobs"> Jobs </a> </li>
+            <li class=".nav-item"> <a href="/scholarships"> Scholarships </a> </li>
         </ul>
+
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
+
 
     <div class="header-right">
         <a href="/registration"> Register | </a>
         <a href="/loginPage"> Sign In </a>
     </div>
 </header>
+
+<script>
+    const hamburger = document.querySelector(".hamburger");
+    const navMenu = document.querySelector(".navbar-links");
+
+    hamburger.addEventListener("click", function(){
+        hamburger.classList.toggle("active");
+        navMenu.classList.toggle("active");
+
+    })
+
+    document.querySelectorAll(".nav-links").forEach(n => {
+        navMenu.hamburger.classList.remove("active")});
+
+</script>
