--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -378,7 +378,7 @@ footer h4{
     .navbar-links{
         /* display: none; */
 
-        position: fixed;
+        /* position: fixed; */
         left: -100%;
         top: 70px;
         gap: 0;
@@ -391,6 +391,7 @@ footer h4{
 
     .navbar-links a{
         color: var(--clr-primary);
+        font-weight: 600;
 
     }
 
