Hamburger added in frontend. Forgot password using sec question functionality added

--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -391,8 +391,8 @@ footer h4{
     }
 
     .navbar-links a{
-        /* color: var(--clr-primary);
-        font-weight: 500; */
+        color: var(--clr-primary);
+        font-weight: 500;
 
     }
 
