Hamburger added in frontend. Forgot password using sec question functionality added

--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -378,7 +378,7 @@ footer h4{
     .navbar-links{
         /* display: none; */
 
-        position: fixed;
+        position: absolute;
         left: -100%;
         top: 70px;
         gap: 0;
