Hamburger added in frontend. Forgot password using sec question functionality added, Slideshow in progress

--- a/templates/views/index2.hbs
+++ b/templates/views/index2.hbs
@@ -24,7 +24,6 @@
                 <button class="btn-white"> <a href="/about"> Know More </a></button>
                 <button class="btn-transp"> <a href="/careeradvice"> Career Advice </a></button>
             </div>
-
         </div>
 
         <div class="slideshow">
@@ -39,7 +38,7 @@
                 <button class="btn-white"> Find Certifications </button>
             </div>
 
-             <div class="sliders" id="slider-1">
+             <div class="sliders" id="slider-2">
                 <h1> Internships </h1>
 
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
@@ -49,7 +48,7 @@
                 <button class="btn-white"> Find Internships </button>
             </div>
 
-             <div class="sliders" id="slider-2">
+             <div class="sliders" id="slider-3">
                 <h1> Jobs </h1>
 
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
@@ -59,7 +58,7 @@
                 <button class="btn-white"> Find Jobs </button>
             </div>
 
-             <div class="sliders" id="slider-3">
+             <div class="sliders" id="slider-4">
                 <h1> Scholarships </h1>
 
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum magnam quod labore sit amet fugit
@@ -69,8 +68,17 @@
                 <button class="btn-white"> Find Scholarships </button>
             </div>
 
+            {{!-- Swiper --}}
 
+            <a class="prev-slideshow">&#10094;</a>
+            <a class="next-slideshow">&#10095;</a>
 
+            <div class="dotsbox" style="text-align: center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
         </div>
 
         <section class="section">
@@ -86,7 +94,6 @@
             </p>
 
             <strong> Thank you for choosing us as your trusted resource! </strong>
-
             <button class="btn"> <a href="#"> Know More </a></button>
         </section>
 
@@ -97,15 +104,11 @@
                 <div id="subscribe">
                 <input type="text" placeholder="Your email">
                 <button class="btn-white"> Subscribe </button>
-
-              
-
                 </div>
 
                 </div>
             </div>
         </section>
-
     </main>
 
     {{>footer2}}
