--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -25,6 +25,7 @@ html,body{
     border: 0px transparent;
     font-family: Arial, Helvetica, sans-serif;
     margin: 2px;
+    cursor: pointer;
 }
 
 .btn-white a{
@@ -39,6 +40,7 @@ html,body{
     border-radius: 12px;
     padding: 10px;
     margin: 2px;
+    cursor: pointer;
 }
 
 .btn-transp a{
@@ -53,6 +55,10 @@ html,body{
     border: 0px transparent;
     padding: 10px;
     margin: 2px;
+}
+
+.btn:hover{
+    background-color: var(--clr-hover);
 }
 
 .btn a{
@@ -70,6 +76,7 @@ button a{
     /* Colors  */
     --clr-text: black;
     --clr-primary: rgba(8, 127, 206, 0.8);
+    --clr-hover: rgba(30, 146, 223, 0.8);
 
     /* Fonts */
     --ff-title: Arial, Helvetica, sans-serif;
@@ -256,10 +263,51 @@ header a:hover{
 .slideshow{
     display: flex;
     flex-wrap: wrap;
+    position: relative;
+    width: 100%;
 }
+
+
 .sliders{
-    display: flex;
-    flex-wrap: wrap;
+   /* display: none; */
+   overflow: hidden; 
+
+}
+
+.prev-slideshow, .next-slideshow{
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    padding: 1.1rem;
+    transition: 0.1s;
+    user-select: none;
+}
+
+.prev-slideshow:hover, .next-slideshow{
+    color: #3498db;
+}
+
+.next-slideshow{
+    right: 0;
+}
+
+.dotsbox{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: -10px;
+    cursor: pointer;
+}
+
+.dot{
+    display: inline-block;
+    width:15px;
+    height: 15px;
+    border: 3px solid black;
+    border-radius: 50%;
+    margin: 0 10px;
+    cursor: pointer;
 }
 
 /* Newsletters */
@@ -402,6 +450,12 @@ footer h4{
 
     .header-right{
         display: none;
+    }
+
+    /* Newsletters Section */
+
+    .newsletters{
+       margin: 0px; 
     }
 
 }
