Custom msg for forgotPassword added, New Index UI HTML structured, CSS in dev

--- a/templates/views/forgotPassword.hbs
+++ b/templates/views/forgotPassword.hbs
@@ -40,6 +40,8 @@
     </div> --}}
 
     <p class="index-para"> <a href="/securityQuestion"> No longer have access to these? Click here </a></p>
+
+   <div style="text-align: center"> {{responseMessage}}</div>
     
 </body>
 </html>
