--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -10,7 +10,7 @@
 
     {{message}}
 
-    <h1 class="section-titles index-para"> {{userProfile.username}}</h1>
+    <h1 class="section-titles index-para"> {{capName}}</h1>
 
     <div class="internshipContainer" style="width=90% !important">
 
