--- a/templates/views/jobs2.hbs
+++ b/templates/views/jobs2.hbs
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    {{>headerMeta}}
+    {{>headerMeta2}}
     <title>Jobs : CareerPilot </title>
 </head>
 
 <body>
-    {{>header}}
+    {{>header2}}
 
     <div class="jobs-gradient">
         <main class="container-jobs">
