--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -1,24 +1,25 @@
 /* CSS RESET */
 
-*{
+* {
     box-sizing: border-box;
     font-family: Verdana, sans-serif;
     font-size: 15px;
     line-height: 1.5;
-    margin:0px;
+    margin: 0px;
     padding: 0px;
 }
 
-html,body{
+html,
+body {
     /* font-size: 15px; */
     line-height: 1.5
 }
 
 /* Utility */
 
-.btn-white{
+.btn-white {
 
-    color:black;
+    color: black;
     padding: 10px;
     border-radius: 12px;
     background-color: white;
@@ -28,12 +29,12 @@ html,body{
     cursor: pointer;
 }
 
-.btn-white a{
+.btn-white a {
 
-    color:black;
+    color: black;
 }
 
-.btn-transp{
+.btn-transp {
     color: white;
     border: 2px solid white;
     background-color: transparent;
@@ -43,12 +44,12 @@ html,body{
     cursor: pointer;
 }
 
-.btn-transp a{
+.btn-transp a {
     color: white;
- 
+
 }
 
-.btn{
+.btn {
     background-color: var(--clr-primary);
     border-radius: 12px;
     color: white;
@@ -57,21 +58,21 @@ html,body{
     margin: 2px;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: var(--clr-hover);
 }
 
-.btn a{
+.btn a {
     color: white;
 }
 
-button a{
+button a {
     text-decoration: none;
 }
 
 /* Variables */
 
-:root{
+:root {
 
     /* Colors  */
     --clr-text: black;
@@ -85,7 +86,9 @@ button a{
 
 /* Typography */
 
-h2,h3,h4{
+h2,
+h3,
+h4 {
     font-family: var(--ff-title);
 }
 
@@ -129,20 +132,20 @@ h6 {
 
 /* Header */
 
-.header{
+.header {
     width: 100%;
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content:space-around;
+    justify-content: space-around;
     font-weight: 100;
-    padding:0.5rem;
+    padding: 0.5rem;
     /* margin: 2px; */
 
 }
 
-.header-left{
+.header-left {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -151,62 +154,63 @@ h6 {
 
 /* Logo Image */
 
-.header-left img{
+.header-left img {
     height: 80px;
     width: 85px;
 }
 
-.navbar{
+.navbar {
     display: inline-block;
 }
 
-#site-title{
+#site-title {
 
     color: rgba(8, 127, 206, 0.8);
     font-weight: 600;
     font-size: 1.3rem;
 }
 
-.navbar-links{
+.navbar-links {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
-  
-   
+
+
 }
-.navbar-links li{
+
+.navbar-links li {
     list-style-type: none;
 }
 
-header a{
+header a {
     text-decoration: none;
     /* padding: 1.2rem; */
     color: black;
 }
 
-.navbar-links li a:focus{
+.navbar-links li a:focus {
     text-decoration: underline;
 }
 
-header a:hover{
+header a:hover {
     color: var(--clr-primary);
 }
 
-.header-right a{
+.header-right a {
     text-decoration: none;
 }
 
 /* Hamburger */
 
-.hamburger{
+.hamburger {
     display: none;
     cursor: pointer;
     background-color: rgb(255, 255, 255);
     color: var(--clr-primary);
-    
+
 }
 
-.bar{
+.bar {
     display: block;
     width: 25px;
     height: 3px;
@@ -219,7 +223,7 @@ header a:hover{
 
 /* HERO Section */
 
-.hero{
+.hero {
     background-color: var(--clr-primary);
     background-image: url(/img/hero.jpg);
     background-repeat: no-repeat;
@@ -231,51 +235,60 @@ header a:hover{
     padding: 1.5em 1em;
 }
 
-.hero h2,p{
+.hero h2,
+p {
     text-align: left;
 }
 
-.btn-box{
+.btn-box {
     display: flex;
 }
 
-.btn-box button{
+.btn-box button {
     margin: 1rem 0.4rem;
 }
 
-.cover-title{
+.cover-title {
     font-weight: 600;
 }
 
 /* General Section */
 
-.section{
+.section {
     padding: 1rem 1.5rem;
     line-height: 2;
 }
 
-.section h1{
+.section h1 {
     padding: 1.5rem 0rem;
 }
 
 /* Slideshow */
 
-.slideshow{
+.slideshow {
     /* display: flex;
     flex-wrap: wrap; */
     position: relative;
-    width: 100%;color: white;
+    width: 100%;
+    color: white;
 }
 
 
-.sliders{
-   /* display: none; */
-   overflow: hidden; 
-   padding: 1.5rem 1rem;
+.sliders {
+    /* display: none; */
+    overflow: hidden;
+    padding: 2rem 1.5rem;
 
 }
 
-.prev-slideshow, .next-slideshow{
+.sliders h1,p{
+    
+    text-align: center;
+    padding: 0px 22px;
+}
+
+.prev-slideshow,
+.next-slideshow {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
@@ -283,27 +296,33 @@ header a:hover{
     padding: 1.1rem;
     transition: 0.1s;
     user-select: none;
+    font-size: 2.6rem;
 }
 
-.prev-slideshow:hover, .next-slideshow{
-    color: #3498db;
+.prev-slideshow:hover,
+.next-slideshow {
+    color: #ffffff;
 }
 
-.next-slideshow{
+.next-slideshow {
     right: 0;
+    
 }
 
-.dotsbox{
+.prev-slideshow{
+   
+}
+.dotsbox {
     position: absolute;
     left: 50%;
     transform: translate(-50%);
-    bottom: -10px;
+    bottom: 0px;
     cursor: pointer;
 }
 
-.dot{
+.dot {
     display: inline-block;
-    width:15px;
+    width: 15px;
     height: 15px;
     border: 3px solid black;
     border-radius: 50%;
@@ -313,48 +332,89 @@ header a:hover{
 
 /* Individual Sliders */
 
-#slider-1{
+#slider-1 {
 
-background-color: coral;
+    background-color: coral;
+    /* background-image: url(/img/certifications.jpg); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: multiply;
 }
 
-#slider-2{
+#slider-2 {
 
-    background-color: darkslategray;
+    background-color: lightseagreen;
 
 }
 
-#slider-3{
+#slider-3 {
 
-    background-color:goldenrod;
+    background-color: goldenrod;
 }
 
-#slider-4{
+#slider-4 {
     background-color: olive;
 
 }
 
-.fade-slideshow{
+.sliders {
+    animation-name: posi;
+    animation-duration: 2s;
+    -webkit-animation-name: posi;
+    -webkit-animation-duration: 2s;
+}
+
+
+
+.fade-slideshow {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
 }
 
-@-webkit-keyframes fade-slideshow{
-    from {opacity: 0.8}
-    to {opacity: 1}
+.active, .dot:hover{
+    border-color: var(--clr-primary);
+
 }
-@keyframes fade-slideshow{
-    from {opacity: 0.8}
-    to {opacity: 1}
+
+@keyframes posi{
+    from {left: 25%}
+    to {left: 15%}
+}
+
+/* @keyframes zoomin{
+    from {transform: scale(1,1);}
+    to {transform: scale(1.5,1.5);}
+} */
+
+
+
+@-webkit-keyframes fade-slideshow {
+    from {
+        opacity: 0.8
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade-slideshow {
+    from {
+        opacity: 0.8
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 
 
 /* Newsletters */
 
-.newsletters{
+.newsletters {
     background-color: var(--clr-primary);
     background-image: url(/img/newsletters.jpg);
     background-repeat: no-repeat;
@@ -363,16 +423,16 @@ background-color: coral;
     border-radius: 20px;
     padding: 1.5rem 1.5rem;
     margin: 0rem 3.5rem;
-    
+
 }
 
-.newsletters h2{
+.newsletters h2 {
     color: white;
     text-align: center;
     padding: 0rem 1.5rem;
 }
 
-.newsletters input{
+.newsletters input {
     background-color: white;
     border-radius: 12px;
     border: 0px transparent;
@@ -381,12 +441,12 @@ background-color: coral;
     padding: 0.5rem;
 }
 
-.newsletters input:focus{
+.newsletters input:focus {
     border: 0px transparent;
-   
+
 }
 
-#subscribe{
+#subscribe {
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -395,77 +455,91 @@ background-color: coral;
 
 /* Footer */
 
-footer{
+footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
 }
 
-footer a{
+footer a {
     color: black;
     text-decoration: none;
 }
 
-footer ul li{
+footer ul li {
     list-style-type: none;
 }
-footer h4{
+
+footer h4 {
     color: var(--clr-primary);
 
 }
 
-.ft-1{
-    
-}
+.ft-1 {}
 
 /* Media Queries */
 
 /* Mobile Screen */
 
+/* Extra small devices */
+
+@media screen and (max-width: 320px) {
+
+    #subscribe input {
+        width: 70%;
+    }
+
+    #site-title {
+        display: none;
+    }
+}
+
+/* Small Devices  */
+
 @media screen and (max-width: 479px) {
     /* Styles for mobile devices in portrait orientation */
 
-    #site-title{
+    #site-title {
         /* display: none; */
     }
 
-    .header-left img{
+    .header-left img {
         /* display: none; */
     }
 
-    .navbar li a{
-      padding: 0.4rem;
-      display: flex;
-      flex-wrap: wrap;
+    .navbar li a {
+        padding: 0.4rem;
+        display: flex;
+        flex-wrap: wrap;
     }
 
-    #subscribe{
+    #subscribe {
         display: flex;
         flex-wrap: wrap;
     }
 
     /* Mobile Hamburger */
 
-    .hamburger{
+    .hamburger {
         display: block;
         width: fit-content;
     }
 
-    .hamburger.active .bar:nth-child(2){
+    .hamburger.active .bar:nth-child(2) {
         opacity: 0;
     }
 
-    .hamburger.active .bar:nth-child(1){
+    .hamburger.active .bar:nth-child(1) {
         transform: translateY(8px) rotate(45deg);
     }
 
-    .hamburger.active .bar:nth-child(3){
+    .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
 
 
-    .navbar-links{
+    .navbar-links {
         /* display: none; */
 
         position: absolute;
@@ -477,27 +551,27 @@ footer h4{
         text-align: center;
         transition: 0.3s;
         width: 100%;
-       
+
     }
 
-    .navbar-links a{
+    .navbar-links a {
         color: var(--clr-primary);
         font-weight: 500;
 
     }
 
-    .navbar-links.active{
+    .navbar-links.active {
         left: 0;
-        }
+    }
 
-    .header-right{
+    .header-right {
         display: none;
     }
 
     /* Newsletters Section */
 
-    .newsletters{
-       margin: 0px; 
+    .newsletters {
+        margin: 0px;
     }
 
 }
