--- a/templates/views/jobs2.hbs
+++ b/templates/views/jobs2.hbs
@@ -3,18 +3,20 @@
 
 <head>
     {{>headerMeta2}}
+    <link rel="stylesheet" href="/css/jobs2.css">
     <title>Jobs : CareerPilot </title>
 </head>
 
 <body>
     {{>header2}}
 
-    <div class="jobs-gradient">
-        <main class="container-jobs">
+        <main>
+            
+            <div class="jobs-hero">
 
-            <h1> CareerPilot </h1>
+            <h1 class="cover-title"> Jobs </h1>
 
-            <h3>Career Exploration Made Easy: Jobs, Scholarships, and More </h3>
+            <p class="cover-para">Your dream job is just a few clicks away. Begin your exploration today and pave the way for a brighter future with our job search portal. </p>
 
             <div class="job-search">
                 <input type="text" name="jobKeyword" placeholder="Looking for? ">
@@ -25,7 +27,7 @@
 
 
         </main>
-    </div>
+
 
     <div class="section">
 
