--- a/templates/views/jobs2.hbs
+++ b/templates/views/jobs2.hbs
@@ -16,7 +16,7 @@
 
             <h1 class="cover-title"> Jobs </h1>
 
-            <p class="cover-para">Your dream job is just a few clicks away. Begin your exploration today and pave the way for a brighter future with our job search portal. </p>
+            <p class="cover-para" style="text-align: center!important;">Explore Endless Opportunities: Your Gateway to Career Success </p>
 
             <div class="job-search">
                 <input type="text" name="jobKeyword" placeholder="Looking for? ">
@@ -31,9 +31,29 @@
 
     <div class="section">
 
-        <h1 class="heading"> Job Based on field </h1>
+        <h1 class="section-title"> Job Based on field </h1>
 
-        <div class="image-gallery">
+        {{!-- Type of jobs. For direct scrapping --}}
+
+        <div class="categories">
+
+        </div>
+
+        {{!-- Result container. Filters + Results --}}
+
+        <div class="result-container">
+
+            {{!-- Filters section --}}
+
+        <div class="filters">
+
+        </div>
+
+        {{!-- Results --}}
+
+        <div class="results">
+
+        </div>
 
         </div>
     </div>
