--- a/templates/views/partials/headerMeta2.hbs
+++ b/templates/views/partials/headerMeta2.hbs
@@ -11,16 +11,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
-{{!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> --}}
+{{!--
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> --}}
 
-{{!--  Karla Font Preconnect --}}
+{{!-- Karla Font Preconnect --}}
 
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
 
- {{!-- Favicon --}}
+{{!-- Favicon --}}
 <link rel="icon" type="image/x-icon" href="/img/favicons/favicon.ico">
 
 {{!-- Google Recaptcha --}}
-{{!-- <script src="https://www.google.com/recaptcha/api.js"></script> --}}
+{{!--
+<script src="https://www.google.com/recaptcha/api.js"></script> --}}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+<script>
+   
+
+</script>
