--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
 <body>
     {{>header}}
 
-    <div class="container">
+    <div class="container temp-adj">
 
         <h1 class="section-titles"> About Us </h1>
 
