New UI for Index& Job Implemented. Data scrapping working in jobs portal

--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -3,7 +3,7 @@
 
 <head>
     {{>headerMeta2}}
-    <link rel="stylesheet" href="/css/jobs2.css">
+    <link rel="stylesheet" href="/css/jobs.css">
     <title>Jobs : CareerPilot </title>
 </head>
 
