--- a/templates/views/partials/headerMeta2.hbs
+++ b/templates/views/partials/headerMeta2.hbs
@@ -27,7 +27,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
+{{!-- Updated one  --}}
 <script>
-   
+
 
 </script>
