New UI for Index& Job Implemented. Data scrapping working in jobs portal

--- a/templates/views/partials/footer2.hbs
+++ b/templates/views/partials/footer2.hbs
@@ -1,7 +1,9 @@
 <footer>
     <div class="ft-1">
         <h4> CareerPilot </h4>
-        <p> Integrated Placements and Scholarship Portal for students and graduates</p>
+        <p>NodeJs based integrated portal for students and graduates to send educational information such as
+            scholarships, job alerts, certifications and many more based on user’s preferences on a single
+            platform </p>
     </div>
 
     <div class="ft-1">
@@ -17,7 +19,7 @@
 
     <div class="ft-1">
         <h4> Help </h4>
-         <ul>
+        <ul>
             <li><a href="/sitemap">Sitemap</a></li>
             <li><a href="">Feedback</a></li>
             <li><a href="">Contact Us</a></li>
@@ -28,7 +30,7 @@
 
     <div class="ft-1">
         <h4> Others </h4>
-         <ul>
+        <ul>
             <li><a href="/about">About</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Career Advice</a></li>
@@ -39,7 +41,7 @@
 
     <div class="ft-1">
         <h4> Terms </h4>
-         <ul>
+        <ul>
             <li><a href=""> Privacy Policy </a></li>
             <li><a href="">Terms of use </a></li>
             <li><a href="">Career Advice</a></li>
@@ -50,4 +52,4 @@
 
 </footer>
 
-<span> &copy; Career Pilot 2023. All Rights Reserved </span>
+<span id="ft-end"> &copy; Career Pilot 2023. All Rights Reserved </span>
