--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -72,7 +72,7 @@ button a {
 
 /* Input */
 
-input{
+input {
     background-color: white;
     border-radius: 12px;
     border: 0px transparent;
@@ -211,7 +211,7 @@ header a:hover {
     text-decoration: none;
 }
 
-#dropdown{
+#dropdown {
     list-style-type: none;
 }
 
@@ -255,7 +255,7 @@ header a:hover {
     text-align: left;
 }
 
-.hero p{
+.hero p {
     text-align: left;
 }
 
@@ -282,7 +282,7 @@ header a:hover {
     padding: 1.5rem 0rem;
 }
 
-.section-title{
+.section-title {
     color: grey;
     font-size: 2.5rem;
 }
@@ -305,13 +305,13 @@ header a:hover {
 
 }
 
-.sliders h1{
-    
+.sliders h1 {
+
     text-align: center;
     padding: 0px 22px;
 }
 
-.sliders p{
+.sliders p {
     text-align: center;
     padding: 0px 22px;
 }
@@ -335,12 +335,11 @@ header a:hover {
 
 .next-slideshow {
     right: 0;
-    
+
 }
 
-.prev-slideshow{
-   
-}
+.prev-slideshow {}
+
 .dotsbox {
     position: absolute;
     left: 50%;
@@ -407,14 +406,20 @@ header a:hover {
     animation-duration: 1.5s;
 }
 
-.active, .dot:hover{
+.active,
+.dot:hover {
     border-color: var(--clr-primary);
 
 }
 
-@keyframes posi{
-    from {left: 25%}
-    to {left: 15%}
+@keyframes posi {
+    from {
+        left: 25%
+    }
+
+    to {
+        left: 15%
+    }
 }
 
 /* @keyframes zoomin{
@@ -446,8 +451,8 @@ header a:hover {
 
 /* About Us Section */
 
-#aboutus-section p{
-text-align: left !important;
+#aboutus-section p {
+    text-align: left !important;
 }
 
 /* Newsletters */
@@ -497,12 +502,20 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    padding: 2rem 1.5rem;
+    align-items: flex-start;
 }
 
 footer a {
     color: black;
     text-decoration: none;
+    font-size: 0.7rem;
+    font-weight: 100;
+}
+
+footer p {
+    font-size: 0.7rem;
+    font-weight: 100;
 }
 
 footer ul li {
@@ -514,11 +527,31 @@ footer h4 {
 
 }
 
-.ft-1 {}
+.ft-1 {
+    width: 20%;
+    padding: 10px;
+    text-align: left;
+    vertical-align: top;
+    align-items: flex-start;
+    
+}
+
+.ft-1 p{
+    /* width: 20%; */
+    /* padding: 10px; */
+    text-align: left;
+}
+
+#ft-end{
+    display: block;
+    text-align: center;
+    font-size: 0.8rem;
+    color: grey;
+}
 
 /* Categories */
 
-.categories{
+.categories {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -526,7 +559,7 @@ footer h4 {
     padding: 1rem 1.5rem;
 }
 
-.cat-items{
+.cat-items {
     width: 30%;
     border: 2px solid grey;
     margin: 1.4rem;
@@ -537,44 +570,46 @@ footer h4 {
     justify-content: center;
 }
 
-.cat-items img{
-margin:auto;
+.cat-items img {
+    margin: auto;
 }
 
-.cat-items h3,p{
+.cat-items h3,
+p {
     text-align: center;
 }
 
 
 /* Result Box */
 
-.result-container{
+.result-container {
     width: 100%;
 }
 
-.results{
+.results {
     width: 60%;
     display: inline-block;
 }
 
 /* Filters */
 
-.filters{
+.filters {
     border: 1px solid grey;
     display: inline-block;
     margin: 0.8rem;
     padding: 1.8rem 1.3rem;
     vertical-align: top;
-    width:25%;
-   
+    width: 25%;
+
 
 }
-.result-box{
+
+.result-box {
     border: 1px solid grey;
     display: inline-block;
     margin: 0.8rem;
     padding: 1.8rem 1.3rem;
-    width:100%;  
+    width: 100%;
 }
 
 /* Media Queries */
@@ -591,6 +626,18 @@ margin:auto;
 
     #site-title {
         display: none;
+    }
+
+    .footer{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .ft-1{
+        width: 100%;
+        text-align: center;
     }
 }
 
@@ -672,5 +719,21 @@ margin:auto;
     .newsletters {
         margin: 0px;
     }
+
+    .footer{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .ft-1{
+        width: 100%;
+        text-align: center;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
 
 }
