New UI for Index& Job Implemented. Data scrapping working in jobs portal

--- a/public/css/jobs.css
+++ b/public/css/jobs.css
@@ -28,11 +28,15 @@
   }
 
   .categories{
-
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .cat-items{
-    
+
+    width:100%;
+
   }
 }
 
